<resources>
    <string name="app_name">HW5_BunyaminOzturk</string>
    <string name="hint">Name</string>
    <string name="toppings">TOPPINGS</string>
    <string name="add_whipped_cream">Add Wripped Cream? </string>
    <string name="cream">Whipped Cream</string>
    <string name="add_chocolate">Add Chocolate? </string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="small_quantity">Quantity: </string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">ORDER</string>
    <string name="amount">0</string>
    <string name="name">Name: </string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="total">Total: </string>
    <string name="thank_you">Thank you!</string>
    <string name="layout_visiblitiy">visible</string>
</resources>