<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <EditText
        android:visibility="visible"
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Name"
        android:hint="@string/hint"
        android:textSize="20sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_toppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/toppings"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <LinearLayout
        android:id="@+id/ly_wripped"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_toppings">

        <CheckBox
            android:id="@+id/whipped_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_wripped_cream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cream"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_chocolate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ly_wripped">

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_chocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ly_chocolate" />

    <LinearLayout
        android:id="@+id/ly_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_quantity"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:height="60dp"
            android:backgroundTint="#A1A5A8"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/tv_amount_int"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:height="60dp"
            android:backgroundTint="#A1A5A8"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"

            />

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ly_outputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/ly_amount">

        <TextView
            android:id="@+id/tv_order_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_summary"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_add_whipped_cream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_whipped_cream"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_add_whipped_cream_boolean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_add_chocolate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_chocolate"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_add_chocolate_boolean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_quantity_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/small_quantity"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_quantity_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_total_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text=""
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_thank_you"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank_you"
            android:textColor="@color/black" />

    </LinearLayout>
    <Button
        android:id="@+id/btn_order"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:backgroundTint="#A1A5A8"
        android:text="@string/order"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ly_outputs"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>